[tool.poetry]
name = "retire-early"
version = "0.1.0"
description = ""
authors = ["fuchiao.chang <zector1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
types-requests = "^2.32.0.20240622"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240603"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
